Fixed spacing bugs

--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: var(--background);
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: 0;
@@ -132,6 +135,7 @@ main {
 #skills {  
     background-color: var(--background2);
     padding-bottom: 3rem;
+    width: 100%;
 }
 
 #skills img {
@@ -165,6 +169,9 @@ main {
 
 form {
     justify-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 form div {
